--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ doc/api/
 
 .flutter-plugins
 .flutter-plugins-dependencies
+GoogleService-Info.plist #Firebase app info
+google-services.json #Firebase app info
