--- a/flash_chat/pubspec.yaml
+++ b/flash_chat/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+  cloud_firestore: ^4.8.1
 
 dev_dependencies:
   flutter_test:
