chuyen qua laptop kia test buid

--- a/flash_chat/android/app/src/main/AndroidManifest.xml
+++ b/flash_chat/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.flash_chat">
    <application
         android:label="flash_chat"
-        android:name="${applicationName}"
+        android:name="io.flutter.app.FlutterMultiDexApplication"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
