--- a/flash_chat/android/app/build.gradle
+++ b/flash_chat/android/app/build.gradle
@@ -47,10 +47,12 @@ android {
         applicationId "com.amunselect.flash_chat"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion localProperties.getProperty('flutter.minSdkVersion').toInteger()
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -70,4 +72,6 @@ flutter {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.1.1')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
