--- a/oclock/pubspec.yaml
+++ b/oclock/pubspec.yaml
@@ -8,10 +8,12 @@ dependencies:
     sdk: flutter
   screen_brightness: ^2.1.6
   wakelock: ^0.6.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
